# conditional-link-generation

./: .gitignore  README.md  gpt4_PPO.py  playground.ipynb  pyproject.toml  render_test.py  resources.txt  stable_baselines_PPO.py  torchrl_PPO.py  train.py
envs/: __init__.py  signature_environment.py  signature_goal_env.py
mcts/: mcts.py
models/: curiosity_models.py
predicting_signature/: create_train_val_test.ipynb  generate_dataset.py  predict_signature.py  run_experiments.sh  utils.py
src/link_generation/envs/: __init__.py  old_signature_environment.py  old_signature_goal_env.py  sig_det_env.py  signature_env.py
src/link_generation/mcts/: mcts.py
src/link_generation/models/: curiousity_models.py  feature_extractor.py  utils.py
src/link_generation/potholders/: utils.py
src/link_generation/predicting_signature/: calculate_det.py  create_train_val_test.ipynb  generate_dataset.py  plot_sig_dist.ipynb  plotting_predictions.ipynb  predict_potholder_sig.py  predict_signature.py  run_cnn_exp.sh  run_gnn_exp.sh  run_gnn_knot_exp.sh  run_knot_gnn_exp.sh  run_mlp_exp.sh  run_reformer_exp.sh  run_transformer_exp.sh  train_potholder.sh  utils.py
src/link_generation/train/: evaluate_model.py  stable_baselines_PPO.py  train_det_sig.py
src/link_generation/vae/: plotting_braid_vae_results.ipynb  plotting_potholder_vae_results.ipynb  random_potholder_dist.ipynb  train_vae.py  train_vae_on_potholder.py  utils.py  vae.py
src/rl_link_builder/models/: curiosity_models.py  (+1 more)
train/: HER.py  normalized_vec_env.pkl  stable_baselines_PPO.py  train_sb3.sh
(+4 files in other folders)
