[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_link_builder"
version = "0.1.0"
description = "Building links one braid group generator at a time"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ndriggs/rl-link-builder"
"Bug Tracker" = "https://github.com/ndriggs/rl-link-builder/issues"