[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "link_generation"
version = "0.1.0"
description = "Generating links conditioned on invariants"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ndriggs/rl-link-builder"
"Bug Tracker" = "https://github.com/ndriggs/rl-link-builder/issues"